Changed some things in service code: now subscription id is given in query parameters for PUT and DELETE and not in body, also improved swagger.yaml
